--- a/index.css
+++ b/index.css
@@ -38,8 +38,8 @@ body {
 .tree{
   position: absolute;
   bottom: 10px;
-  width: 50%;
-  max-width: 400px;
+  width: 75vw;
+  max-width: 75vw;
   height: auto;
   z-index: 1;
 }
