--- a/index.css
+++ b/index.css
@@ -38,9 +38,10 @@ body {
 .tree{
   position: absolute;
   bottom: 10px;
-  width: 90vw;
+  width: 75vw;
   max-width: 100vw;
   max-height: 80vh;
+  height: auto;
   z-index: 1;
 }
 
